--- a/src/components/splash/splash.scss
+++ b/src/components/splash/splash.scss
@@ -1,3 +1,10 @@
+.app-actions {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 40px auto;
+}
+
 .user {
   display: flex;
   flex-direction: column;
