--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+* {
+  box-sizing: border-box;
+  -webkit-appearance: none;
+}
+
 body,
 html {
   font-family: 'Roboto', sans-serif;
+}
+
+ol {
+  list-style: decimal;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 0.5em;
+  line-height: 1.3;
 }
 
 img {
@@ -21,6 +36,30 @@ a {
   }
 }
 
+input[type=text] {
+  border: 1px solid lightgray;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 1em;
+  font-size: 16px;
+}
+
+label {
+  font-size: 0.8em;
+  padding-bottom: 0.25em;
+  display: block;
+}
+
 .main-container {
   padding: 40px 10px 10px;
+}
+
+.btn {
+  padding: 20px 30px;
+  color: white;
+  background-color: orange;
+  border-radius: 5px;
+  text-align: center;
+  border: 0;
+  width: 100%;
 }
